fixed php-code overflow + removed extra hr

--- a/www/css/common/php-code.css
+++ b/www/css/common/php-code.css
@@ -1,7 +1,8 @@
 .php-code {
     background: #f7f7f7;
-    padding: 8px;
+    padding: 7px 8px;
     margin: -8px;
+    overflow: auto;
 }
 
 .php-code .comment {
